[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/Levels/Objects/Crystal/crystal.gd" type="Script" id=1]
[ext_resource path="res://World/Levels/Objects/Crystal/crystal.obj" type="ArrayMesh" id=2]
[ext_resource path="res://World/Levels/Objects/Crystal/crystal.material" type="Material" id=3]
[ext_resource path="res://World/Levels/Objects/Crystal/crystal_target.obj" type="ArrayMesh" id=4]
[ext_resource path="res://World/Levels/Objects/Crystal/Crystal_Target.material" type="Material" id=5]
[ext_resource path="res://World/Levels/Objects/Components/Power_Container/Power_Container.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Levels/Objects/Components/Beam/Beam_Target/Beam_Target.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Levels/Objects/Components/Blaster/Blast_Target/Blast_Target.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Focus_Controller/Focus_Target/Focus_Target.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.348641, 0.30848, -0.00693, -0.287917, -0.43419, -0.00693, -0.045608, 0.474468, -0.259126, -0.051921, -0.467079, -0.179201, -0.045608, 0.474468, -0.259126, -0.051921, -0.467079, -0.179201, 0.281201, 0.356265, -0.217004, 0.173669, -0.514552, -0.152287, 0.364836, 0.068425, -0.00693, 0.293599, -0.602657, 0.055882, 0.261213, 0.244166, 0.292676, 0.212654, -0.483663, 0.277826, 0.040964, 0.217602, 0.424621, 0.021751, -0.59725, 0.29891, -0.208768, 0.056191, 0.309223, -0.151996, -0.491924, 0.224406, -0.151996, -0.491924, 0.224406, 0.021751, -0.59725, 0.29891, 0, -1, -0.00231, 0.281201, 0.356265, -0.217004, 0.364836, 0.068425, -0.00693, 0, 1, -0.00231, -0.208768, 0.056191, 0.309223, -0.348641, 0.30848, -0.00693, 0, 1, -0.00231, 0.261213, 0.244166, 0.292676, 0.040964, 0.217602, 0.424621, 0, 1, -0.00231, 0.173669, -0.514552, -0.152287, -0.051921, -0.467079, -0.179201, 0, -1, -0.00231, -0.051921, -0.467079, -0.179201, -0.287917, -0.43419, -0.00693, 0, -1, -0.00231, 0.212654, -0.483663, 0.277826, 0.293599, -0.602657, 0.055882, 0, -1, -0.00231, -0.045608, 0.474468, -0.259126, 0.281201, 0.356265, -0.217004, 0, 1, -0.00231, 0.040964, 0.217602, 0.424621, -0.208768, 0.056191, 0.309223, 0, 1, -0.00231, 0.021751, -0.59725, 0.29891, 0.212654, -0.483663, 0.277826, 0, -1, -0.00231, 0.261213, 0.244166, 0.292676, 0.212654, -0.483663, 0.277826, 0.040964, 0.217602, 0.424621, 0.021751, -0.59725, 0.29891, 0.293599, -0.602657, 0.055882, 0.173669, -0.514552, -0.152287, 0, -1, -0.00231, -0.287917, -0.43419, -0.00693, -0.151996, -0.491924, 0.224406, 0, -1, -0.00231, -0.348641, 0.30848, -0.00693, -0.045608, 0.474468, -0.259126, 0, 1, -0.00231, 0.364836, 0.068425, -0.00693, 0.261213, 0.244166, 0.292676, 0, 1, -0.00231, 0.281201, 0.356265, -0.217004, 0.173669, -0.514552, -0.152287, 0.364836, 0.068425, -0.00693, 0.293599, -0.602657, 0.055882, -0.208768, 0.056191, 0.309223, -0.151996, -0.491924, 0.224406, -0.348641, 0.30848, -0.00693, -0.287917, -0.43419, -0.00693 )

[sub_resource type="SphereShape" id=2]

[node name="Crystal" type="Spatial"]
script = ExtResource( 1 )
rotation_speed = 0.3

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="Crystal_Mesh" type="MeshInstance" parent="StaticBody"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )

[node name="Crystal_Target_Mesh" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="Mouse_Pick_Area" type="Area" parent="."]
input_ray_pickable = true

[node name="CollisionShape" type="CollisionShape" parent="Mouse_Pick_Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Power_Container" parent="." instance=ExtResource( 6 )]
max_total_capacity = 10

[node name="Beam_Target" parent="." instance=ExtResource( 7 )]

[node name="Blast_Target" parent="." instance=ExtResource( 8 )]

[node name="Focus_Target" parent="." instance=ExtResource( 9 )]

[connection signal="mouse_entered" from="Mouse_Pick_Area" to="Focus_Target" method="_on_targeted"]
[connection signal="mouse_entered" from="Mouse_Pick_Area" to="." method="_on_Mouse_Pick_Area_mouse_entered"]
[connection signal="mouse_exited" from="Mouse_Pick_Area" to="Focus_Target" method="_on_detargeted"]
[connection signal="mouse_exited" from="Mouse_Pick_Area" to="." method="_on_Mouse_Pick_Area_mouse_exited"]
[connection signal="filled" from="Power_Container" to="." method="_on_Power_Container_filled"]
[connection signal="received" from="Beam_Target" to="." method="_on_Beam_Target_received"]
[connection signal="received" from="Blast_Target" to="." method="_on_Blast_Target_received"]
